<resources>
    <!-- String pour la vue de l'accueil. -->
    <string name="app_name">Fish Hunt</string>
    <string name="nouvelle_partie_acceuil">Nouvelle Partie!</string>
    <string name="meilleurs_scores_accueil">Meilleurs scores</string>
    <string name="multijoueurs_acceuil">Multijoueurs</string>
    <!-- String pour la vue d'affichage de scores. -->
    <string name="ajout_pseudo_button_score">Ajouter</string>
    <string name="menu_button_score">Menu</string>
    <!-- String pour la vue de connexion. -->
    <string name="adresse_textview_connexion">Adresse :</string>
    <string name="port_textview_connexion">Port :</string>
    <string name="connexion_button_connexion">Connexion</string>
    <string name="informations_erreur_textview_connexion">Erreur de connexions.</string>
    <string name="informations_connecte_textview_connexion">Serveur connecté.</string>
    <string name="informations_connexion_textview_connexion">Connexion en cours...</string>
    <string name="informations_pseudo_accepte_textview_connexion">Pseudo accepté</string>
    <string name="informations_pseudo_refuse_textview_connexion">Pseudo refusé. Veuillez choisir un autre pseudo.</string>
    <string name="toast_port_connexion">Un port est un entier.</string>
    <string name="pseudo_textview_connexion">Votre pseudo :</string>
    <string name="valider_button_connexion">Valider</string>
    <string name="menu_button_connexion">Menu</string>
</resources>
