<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondMarin"
    android:gravity="center">

    <TextView
        android:id="@+id/informations_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="35sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse_textview_connexion"
                android:textColor="#fff"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/adresse_edittext"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_textview_connexion"
                android:textSize="30sp"
                android:textColor="#fff"/>

            <EditText
                android:id="@+id/port_edittext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#fff"/>

        </LinearLayout>

        <Button
            android:id="@+id/conexion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion_button_connexion"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pseudo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pseudo_textview_connexion"
            android:textSize="30sp"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/pseudo_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/valider_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider_button_connexion" />

    </LinearLayout>

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_score"
        android:layout_margin="10dp"/>


</LinearLayout>