<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linearlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondMarin"
    android:gravity="center"
    tools:context=".controleur.activite.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="40"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="60"
        android:gravity="center">

        <Button
            android:id="@+id/nouvelle_partie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_button"
            android:text="@string/nouvelle_partie_acceuil"/>

        <Button
            android:id="@+id/meilleurs_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_button"
            android:text="@string/meilleurs_scores_accueil"/>

        <Button
            android:id="@+id/multijoueurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/app_button"
            android:text="@string/multijoueurs_acceuil"/>


    </LinearLayout>

</LinearLayout>